--- a/edit_akun.html
+++ b/edit_akun.html
@@ -58,13 +58,13 @@ if (isset($_POST['simpan'])) {
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css"> </head>
+    <link rel="stylesheet" href="css/profil.css"> </head>
 <body>
 
 <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
         <div class="d-flex align-items-center">
-            <a class="navbar-brand me-4" href="index.php">
+            <a class="navbar-brand me-4" href="index.html">
                 <img src="image/logo usu.jpg" alt="USU" style="height: 40px;">
                 <img src="image/satuti.png" alt="Satu TI" class="ms-1" style="height: 40px;">
             </a>
@@ -80,9 +80,9 @@ if (isset($_POST['simpan'])) {
                 </div>
             </a>
             <ul class="dropdown-menu dropdown-menu-end border-0 shadow-lg">
-                <li><a class="dropdown-item" href="profil.php"><i class="fa-solid fa-id-card me-2"></i> Profil</a></li>
+                <li><a class="dropdown-item" href="profil.html"><i class="fa-solid fa-id-card me-2"></i> Profil</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item text-danger" href="logout.php"><i class="fa-solid fa-power-off me-2"></i> Keluar</a></li>
+                <li><a class="dropdown-item text-danger" href="logout.html"><i class="fa-solid fa-power-off me-2"></i> Keluar</a></li>
             </ul>
         </div>
     </div>
@@ -90,16 +90,16 @@ if (isset($_POST['simpan'])) {
 
 <div class="sidebar">
     <nav class="nav flex-column">
-        <a class="nav-link" href="index.php"><i class="fa-solid fa-house"></i> Beranda</a>
-        <a class="nav-link" href="profil_dosen.php"><i class="fa-solid fa-chalkboard-user"></i> Dosen</a>
+        <a class="nav-link" href="index.html"><i class="fa-solid fa-house"></i> Beranda</a>
+        <a class="nav-link" href="profil_dosen.html"><i class="fa-solid fa-chalkboard-user"></i> Dosen</a>
         <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"><i class="fa-solid fa-calendar-days"></i> Jadwal</a>
             <ul class="dropdown-menu border-0 shadow-sm ms-3">
-                <li><a class="dropdown-item" href="jadwal_dosen.php">Jadwal Dosen</a></li>
-                <li><a class="dropdown-item" href="jadwal_mahasiswa.php">Jadwal Kuliah</a></li>
+                <li><a class="dropdown-item" href="jadwal_dosen.html">Jadwal Dosen</a></li>
+                <li><a class="dropdown-item" href="jadwal_mahasiswa.html">Jadwal Kuliah</a></li>
             </ul>
         </div>
-        <a class="nav-link" href="kelas.php"><i class="fa-solid fa-graduation-cap"></i> Kelas</a>
+        <a class="nav-link" href="kelas.html"><i class="fa-solid fa-graduation-cap"></i> Kelas</a>
     </nav>
 </div>
 
@@ -143,7 +143,7 @@ if (isset($_POST['simpan'])) {
                         <button type="submit" name="simpan" class="btn btn-success px-4 rounded-pill">
                             <i class="fa-solid fa-floppy-disk me-2"></i> Simpan Perubahan
                         </button>
-                        <a href="profil.php" class="btn btn-outline-secondary px-4 rounded-pill ms-2">Batal</a>
+                        <a href="profil.html" class="btn btn-outline-secondary px-4 rounded-pill ms-2">Batal</a>
                     </div>
                 </div>
             </form>
@@ -153,32 +153,69 @@ if (isset($_POST['simpan'])) {
 
 <footer class="portal-footer">
     <div class="container-fluid px-5">
+
         <div class="row gy-4">
+            <!-- Logo & Deskripsi -->
             <div class="col-lg-4">
-                <div class="text-white fw-bold fs-4 mb-3">SATU TI</div>
-                <p class="small opacity-50 pe-lg-5">Program Studi S1 Teknologi Informasi USU berfokus pada keunggulan akademik dan riset di bidang Data Science.</p>
-                <div class="d-flex gap-3 mt-4 footer-socials">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                <img 
+                    src="image/logo.png" 
+                    alt="Logo Satu TI" 
+                    class="mb-3"
+                    style="filter: brightness(0) invert(1); height: 40px;"
+                >
+
+                <p class="small opacity-50 pe-lg-5 text-justify">
+                    Program Studi S1 Teknologi Informasi USU berfokus pada keunggulan
+                    akademik dan riset di bidang Data Science untuk masa depan Indonesia.
+                </p>
+
+                <div class="d-flex gap-3 mt-4">
+                    <a href="#" class="text-white opacity-50 hover-opacity-100">
+                        <i class="fa-brands fa-instagram fs-5"></i>
+                    </a>
+                    <a href="#" class="text-white opacity-50 hover-opacity-100">
+                        <i class="fa-brands fa-facebook fs-5"></i>
+                    </a>
+                    <a href="#" class="text-white opacity-50 hover-opacity-100">
+                        <i class="fa-brands fa-youtube fs-5"></i>
+                    </a>
                 </div>
             </div>
-            <div class="col-lg-4">
+
+            <!-- Navigasi -->
+            <div class="col-lg-4 col-md-6">
                 <h6 class="footer-title">Navigasi</h6>
-                <a href="index.php" class="footer-link">Beranda</a>
-                <a href="profil_dosen.php" class="footer-link">Dosen</a>
-                <a href="jadwal_mahasiswa.php" class="footer-link">Jadwal Kuliah</a>
+                <a href="#" class="footer-link">Beranda</a>
+                <a href="profil_dosen.html" class="footer-link">Dosen</a>
+                <a href="jadwal_mahasiswa.html" class="footer-link">Jadwal Perkuliahan</a>
+                <a href="kelas.html" class="footer-link">Informasi Kelas</a>
             </div>
-            <div class="col-lg-4">
+
+            <!-- Kontak -->
+            <div class="col-lg-4 col-md-6">
                 <h6 class="footer-title">Kontak Kami</h6>
-                <div class="contact-info text-white-50">
-                    <p class="small"><i class="fas fa-map-marker-alt me-2 text-success"></i> Gedung Fasilkom-TI, Kampus USU, Medan</p>
-                    <p class="small"><i class="fas fa-envelope me-2 text-success"></i> ti@usu.ac.id</p>
-                </div>
+                <p class="small mb-2">
+                    <i class="fa-solid fa-location-dot me-2 text-success"></i>
+                    Gedung Fasilkom-TI, Kampus USU, Medan
+                </p>
+                <p class="small mb-2">
+                    <i class="fa-solid fa-envelope me-2 text-success"></i>
+                    ti@usu.ac.id
+                </p>
+                <p class="small mb-2">
+                    <i class="fa-solid fa-phone me-2 text-success"></i>
+                    (061) 8218XXX
+                </p>
             </div>
         </div>
+
         <hr class="my-5 opacity-10">
-        <div class="text-center small opacity-50">© 2025 S1 Teknologi Informasi – Universitas Sumatera Utara.</div>
+
+        <div class="text-center small opacity-50">
+            &copy; 2025 S1 Teknologi Informasi – Universitas Sumatera Utara.
+            All Rights Reserved.
+        </div>
+
     </div>
 </footer>
 
