--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </div>
             </a>
             <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 py-2" style="border-radius: 15px;">
-                <li><a class="dropdown-item py-2" href="#"><i class="fa-solid fa-id-card me-2"></i> Profil Saya</a></li>
-                <li><a class="dropdown-item py-2" href="#"><i class="fa-solid fa-gear me-2"></i> Pengaturan</a></li>
+                <li><a class="dropdown-item py-2" href="profil.html"><i class="fa-solid fa-id-card me-2"></i> Profil Saya</a></li>
+                <li><a class="dropdown-item py-2" href="edit_akun.html"><i class="fa-solid fa-gear me-2"></i> Pengaturan</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item py-2 text-danger" href="#"><i class="fa-solid fa-power-off me-2"></i> Keluar</a></li>
+                <li><a class="dropdown-item py-2 text-danger" href="logout.html"><i class="fa-solid fa-power-off me-2"></i> Keluar</a></li>
             </ul>
         </div>
     </div>
@@ -47,16 +47,16 @@
 
 <div class="sidebar">
     <nav class="nav flex-column">
-        <a class="nav-link active" href="index.php"><i class="fa-solid fa-house"></i> Beranda</a>
-        <a class="nav-link" href="profil_dosen.php"><i class="fa-solid fa-chalkboard-user"></i> Dosen</a>
+        <a class="nav-link active" href="index.html"><i class="fa-solid fa-house"></i> Beranda</a>
+        <a class="nav-link" href="profil_dosen.html"><i class="fa-solid fa-chalkboard-user"></i> Dosen</a>
         <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="jadwalDrop" data-bs-toggle="dropdown"><i class="fa-solid fa-calendar-days"></i> Jadwal</a>
             <ul class="dropdown-menu border-0 shadow-sm ms-3">
-                <li><a class="dropdown-item" href="jadwal_dosen.php">Jadwal Dosen</a></li>
-                <li><a class="dropdown-item" href="jadwal_mahasiswa.php">Jadwal Kuliah</a></li>
+                <li><a class="dropdown-item" href="jadwal_dosen.html">Jadwal Dosen</a></li>
+                <li><a class="dropdown-item" href="jadwal_mahasiswa.html">Jadwal Kuliah</a></li>
             </ul>
         </div>
-        <a class="nav-link" href="kelas.php"><i class="fa-solid fa-graduation-cap"></i> Kelas</a>
+        <a class="nav-link" href="kelas.html"><i class="fa-solid fa-graduation-cap"></i> Kelas</a>
     </nav>
 </div>
 
@@ -288,9 +288,9 @@
             <div class="col-lg-4 col-md-6">
                 <h6 class="footer-title">Navigasi</h6>
                 <a href="#" class="footer-link">Beranda</a>
-                <a href="#" class="footer-link">Dosen</a>
-                <a href="#" class="footer-link">Jadwal Perkuliahan</a>
-                <a href="#" class="footer-link">Informasi Kelas</a>
+                <a href="profil_dosen.html" class="footer-link">Dosen</a>
+                <a href="jadwal_mahasiswa.html" class="footer-link">Jadwal Perkuliahan</a>
+                <a href="kelas.html" class="footer-link">Informasi Kelas</a>
             </div>
 
             <!-- Kontak -->
